# cov-vina

./: .gitignore  LICENSE  README.md  pyproject.toml  run_benchmarks.sh
docs/: ALIGNMENT_METHODS_ANALYSIS.md  API_REFERENCE.md  ARCHITECTURE.md  BATCH_DOCKING.md  DEDUPLICATION_COMPLETE.md  FUNCTIONAL_GROUPS_COMPLETE.md  OPTIMIZATION_ROADMAP.md  PHARMACOPHORE.md  PHARMACOPHORE_DESIGN.md  PROGRESS.md  README.md  STEP_BY_STEP_CAPABILITIES.md  USAGE.md
examples/: README.md  test_ligands_small.smi  test_molecules.txt
examples/10gs/: 10gs_ligand.sdf
examples/1m17/: final_poses.sdf  molecules.smi
examples/3poz/: final_poses.sdf  molecules.smi
examples/6lu7/: PJE_ideal.sdf  final_poses.sdf  (+2 more)
reports/: 2026-03-06-weekly.md  PIPELINE_WALKTHROUGH.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  progress.md  results.md  weekly-template.md
scripts/: benchmark_runtime.py  calculate_rmsd.py  extract_and_redock_crystal.py  extract_ligand_from_pdb.py  extract_pocket.py  extract_reference_and_redock.py  optimize_pose.py  reconstruct_ligand.py  render_mcs_coverage_gifs.py  run_batch_docking.py  run_batch_docking_cached.py  run_covalent_pipeline.py  run_parallel_docking.py  run_pipeline.py  test_crystal_vs_docked.py  vis_comparison_grid.py  vis_covalent_opt_gif.py  vis_opt_gif.py  vis_ref_opt_gif.py  visualize_optimization_trajectory.py  visualize_pose_gif.py  visualize_redocking.py
tests/: conftest.py  test_covalent_anchor.py  test_covalent_pipeline.py  test_functional_groups_final.py  test_mcs_auto_mode.py  test_mcs_modes_cli.py  test_pipeline_api.py  test_unified_mcs_api.py
(+48 files in other folders)
